package com.mjaron.mjregistry.core;

/**
 * Defines format of property used to store or send.
 */
public interface IRawProperty extends IPropertyOperations<String, Object> {
}